Change min-height of viewer to 872px to prevent jump while pics loading

--- a/src/scss/_main-styles.scss
+++ b/src/scss/_main-styles.scss
@@ -180,7 +180,7 @@ header {
 	}
 }
 .viewing-area {
-	min-height: 750px;
+	min-height: 872px;
 	.image-display {
 		padding: 20px;
 		ul {
